FEAT : page works and about

--- a/workflow/src/about.html
+++ b/workflow/src/about.html
@@ -29,7 +29,7 @@
 		<header class="header">
         <div class="menu">
           <a class="menu__logo" href="index.html">Logo</a>
-          <div class="menu__page">Home</div>
+          <div class="menu__page">About</div>
           <div class="menu__btn">
             <button class="btn btn--menu"><span></span></button>
           </div>
@@ -43,7 +43,7 @@
                   <img src="assets/images/menu.jpg" alt="menu">
                 </a>
               </div>
-              <h2 class="title title--medium author">
+              <h1 class="title title--medium author">
                 <div class="author__firstname">Tanguy</div>
                 <div class="author__lastname">Hellin</div>
                 <div class="author__tasks">
@@ -55,7 +55,7 @@
                     <li class="tasks__element">Web Design</li>
                   </ul>
                 </div>
-              </h2>
+              </h1>
               <nav class="nav">
                 <ul class="list nav__list">
                   <li class="nav__element"><a class="nav__element--link nav__element--actif" href="index.html">Home</a></li>
@@ -103,119 +103,6 @@
             </span>
           </h1>
           <a class="anchor" href="#scroll">Scroll</a>
-        </div>
-      </section>
-      <section class="section section--swiper" id="scroll">
-        <div class="container">
-          <h2 class="title title--large">Mes projets</h2>
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="card">
-                <div class="card__content drag">
-                  <span class="card__type">Portfolio</span>
-                  <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-                  <span class="card__date">Août 2022</span>
-                </div>
-                  <a class="open" href="http://tanguy-hellin.be/projets/alexpicture">
-                    <img src="assets/images/alex.jpg" alt="Henri PFR">
-                  </a>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="card">
-                  <div class="card__content drag">
-                    <span class="card__type">TFE</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-                    <span class="card__date">Juin 2022</span>
-                  </div>
-                  <a class="open" href="http://tanguy-hellin.be/projets/tfe">
-                    <img src="assets/images/rover.jpg" alt="Perseverance">
-                  </a>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="card">
-                  <div class="card__content drag">
-                    <span class="card__type">Stage</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-                    <span class="card__date">Décembre 2021</span>
-                  </div>
-                  <a class="open" href="https://ms-sep.be">
-                    <img src="assets/images/main.jpg" alt="Sclérose en plaque">
-                  </a>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="card">
-                  <div class="card__content drag">
-                    <span class="card__type">Dataplay</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-                    <span class="card__date">Mai 2021</span>
-                  </div>
-                  <a class="open" href="http://lennysgarden.be">
-                    <img src="assets/images/concombre.jpg" alt="Concombre">
-                  </a>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="card">
-                  <div class="card__content drag">
-                    <span class="card__type">TFA</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-                    <span class="card__date">Mai 2021</span>
-                  </div>
-                  <a class="open" href="http://tanguy-hellin.be/projets/tfa">
-                    <img src="assets/images/cosplay.jpg" alt="Cosplay Star Wars">
-                  </a>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="card">
-                  <div class="card__content drag">
-                    <span class="card__type">Rethinking UX</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-                    <span class="card__date">Février 2021</span>
-                  </div>
-                  <a class="open" href="http://tanguy-hellin.be/projets/rethinking-ux">
-                    <img src="assets/images/imal.jpg" alt="Imal">
-                  </a>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="card">
-                  <div class="card__content drag">
-                    <span class="card__type">Iolce</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
-                    <span class="card__date">Décembre 2020</span>
-                  </div>
-                  <a class="open" href="http://tanguy-hellin.be/projets/iolce">
-                    <img src="assets/images/shirley.jpg" alt="Shirley Wu">
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section section--jaune">
-        <div class="lines">
-          <div class="line line--1"></div>
-          <div class="line line--2"></div>
-          <div class="line line--3"></div>
-        </div>
-        <div class="container">
-          <h1 class="title title--large">Titre</h1>
-          <div class="parallax parallax--flo"></div>
-          <div class="parallax parallax--about"></div>
-        </div>
-      </section>
-      <section class="section section--services">
-        <div class="container">
-          <div class="services">Web Design</div>
-          <div class="services">Photography —</div>
-          <div class="services">UI — UX Design</div>
-          <div class="services">Video Edit</div>
         </div>
       </section>
       <section class="section section--loop">
