--- a/workflow/src/about.html
+++ b/workflow/src/about.html
@@ -28,7 +28,12 @@
 	<body>
 		<header class="header">
         <div class="menu">
-          <a class="menu__logo" href="index.html">Logo</a>
+          <a class="menu__logo" href="index.html">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 78.22 50" height="48">
+              <path d="M5.87 0v9.13h7.99V0h5.87v23.31h-5.87v-9.39H5.87v9.39H0V0h5.87ZM39.67 8.93v4.79H29.5v4.79h12v4.79H23.63V0H41.3v4.79H29.5v4.14h10.17ZM54.96 23.31V4.79H44.59V0h16.23v23.31h-5.87ZM5.87 26.69V45.2h22.62v4.79H0v-23.3h5.87ZM36.96 26.69V50h-5.87V26.69h5.87ZM40.88 26.69h5.87l8.15 13.85h.07V26.69h5.87V50h-5.87l-8.15-13.85h-.07V50h-5.87V26.69Z"/>
+              <path d="M64.88 50v-5.78c0-3.63 2.34-5.82 6.53-5.82s6.51 2.01 6.51 5.64v5.97H64.87Zm10.36-3.28v-2.1c0-2.04-1.46-2.86-3.83-2.86s-3.85.82-3.85 2.86v2.1h7.68ZM74.1 26.41c2.5 0 4.12 1.9 4.12 5.16s-1.73 5.99-4.73 5.99v-3.32c1.51 0 2.08-1.15 2.08-2.63 0-1.22-.49-1.84-1.17-1.84-1.11 0-1.4 1.3-1.95 3.1-.66 2.28-1.57 4.29-3.9 4.29-2.85 0-3.96-2.23-3.96-5.04 0-3.05 1.61-5.44 4.25-5.53v3.32c-1 .15-1.61.95-1.61 2.21 0 .99.33 1.68 1.08 1.68.88 0 1.17-.73 1.66-2.39.73-2.46 1.42-5 4.12-5ZM67.27 19.23c0 2.15 1.68 2.9 4.12 2.9s4.14-.75 4.14-3.03c0-1.51-.91-2.57-2.17-2.61v2.48h-2.37v-5.88h6.93v2.35l-1.66.33v.04c1.19.62 1.95 1.84 1.95 3.76 0 3.7-2.88 5.91-6.82 5.91s-6.81-2.21-6.81-6.31c0-3.58 2.12-5.57 4.62-5.88v3.36c-.89.24-1.93.77-1.93 2.57ZM64.88 11.17V7.89l7.76-4.56v-.04h-7.76V0h13.05v3.28l-7.75 4.56v.04h7.75v3.28H64.88Z"/>
+            </svg>
+          </a>
           <div class="menu__page">About</div>
           <div class="menu__btn">
             <button class="btn btn--menu"><span></span></button>
@@ -39,9 +44,9 @@
             <div class="menu__main">
               <div class="last">
                 <small>Mon dernier projet</small>
-                <a class="open" href="#">
-                  <img src="assets/images/menu.jpg" alt="menu">
-                </a>
+                <a class="open" href="http://tanguy-hellin.be/projets/alexpicture">
+                    <img src="assets/images/alex.jpg" alt="dernier projet">
+                  </a>
               </div>
               <h1 class="title title--medium author">
                 <div class="author__firstname">Tanguy</div>
@@ -58,9 +63,9 @@
               </h1>
               <nav class="nav">
                 <ul class="list nav__list">
-                  <li class="nav__element"><a class="nav__element--link nav__element--actif" href="index.html">Home</a></li>
+                  <li class="nav__element"><a class="nav__element--link" href="index.html">Home</a></li>
                   <li class="nav__element"><a class="nav__element--link" href="works.html">Works</a></li>
-                  <li class="nav__element"><a class="nav__element--link" href="about.html">About</a></li>
+                  <li class="nav__element"><a class="nav__element--link nav__element--actif" href="about.html">About</a></li>
                   <li class="nav__element"><a class="nav__element--link" href="contact.html">Contact</a></li>
                 </ul>
               </nav>
@@ -105,6 +110,18 @@
           <a class="anchor" href="#scroll">Scroll</a>
         </div>
       </section>
+      <section class="section section--jaune">
+        <div class="lines">
+          <div class="line line--1"></div>
+          <div class="line line--2"></div>
+          <div class="line line--3"></div>
+        </div>
+        <div class="container">
+          <h1 class="title title--large">Titre</h1>
+          <div class="parallax parallax--flo"></div>
+          <div class="parallax parallax--about"></div>
+        </div>
+      </section>
       <section class="section section--loop">
         <div class="container">
           <a class="link" href="contact.html">
@@ -138,7 +155,12 @@
       <div class="container">
         <div class="footer__top">
           <div class="footer__top--left">
-            <a class="footer__logo" href="index.html">Logo</a>
+            <a class="footer__logo" href="index.html">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 78.22 50" height="48" fill="#FFF">
+                <path d="M5.87 0v9.13h7.99V0h5.87v23.31h-5.87v-9.39H5.87v9.39H0V0h5.87ZM39.67 8.93v4.79H29.5v4.79h12v4.79H23.63V0H41.3v4.79H29.5v4.14h10.17ZM54.96 23.31V4.79H44.59V0h16.23v23.31h-5.87ZM5.87 26.69V45.2h22.62v4.79H0v-23.3h5.87ZM36.96 26.69V50h-5.87V26.69h5.87ZM40.88 26.69h5.87l8.15 13.85h.07V26.69h5.87V50h-5.87l-8.15-13.85h-.07V50h-5.87V26.69Z"/>
+                <path d="M64.88 50v-5.78c0-3.63 2.34-5.82 6.53-5.82s6.51 2.01 6.51 5.64v5.97H64.87Zm10.36-3.28v-2.1c0-2.04-1.46-2.86-3.83-2.86s-3.85.82-3.85 2.86v2.1h7.68ZM74.1 26.41c2.5 0 4.12 1.9 4.12 5.16s-1.73 5.99-4.73 5.99v-3.32c1.51 0 2.08-1.15 2.08-2.63 0-1.22-.49-1.84-1.17-1.84-1.11 0-1.4 1.3-1.95 3.1-.66 2.28-1.57 4.29-3.9 4.29-2.85 0-3.96-2.23-3.96-5.04 0-3.05 1.61-5.44 4.25-5.53v3.32c-1 .15-1.61.95-1.61 2.21 0 .99.33 1.68 1.08 1.68.88 0 1.17-.73 1.66-2.39.73-2.46 1.42-5 4.12-5ZM67.27 19.23c0 2.15 1.68 2.9 4.12 2.9s4.14-.75 4.14-3.03c0-1.51-.91-2.57-2.17-2.61v2.48h-2.37v-5.88h6.93v2.35l-1.66.33v.04c1.19.62 1.95 1.84 1.95 3.76 0 3.7-2.88 5.91-6.82 5.91s-6.81-2.21-6.81-6.31c0-3.58 2.12-5.57 4.62-5.88v3.36c-.89.24-1.93.77-1.93 2.57ZM64.88 11.17V7.89l7.76-4.56v-.04h-7.76V0h13.05v3.28l-7.75 4.56v.04h7.75v3.28H64.88Z"/>
+              </svg>
+            </a>
             <ul class="list footer__info">
               <li>hellintanguy@gmail.com</li>
               <li>Brussels — Belgium</li>
