Feat : final version

--- a/workflow/src/index.html
+++ b/workflow/src/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>TangO project</title>
+		<title>Home — Tanguy Hellin</title>
     <link rel="stylesheet" href="styles/main.css">
 		<script src="scripts/main.js" defer></script>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.svg"/>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Méta Google -->
-    <meta name="title" content="TangO project" />
-    <meta name="description" content="description" />
+    <meta name="title" content="Portfolio de Tanguy Hellin" />
+    <meta name="description" content="Portfolio de Tanguy Hellin, Web Designer diplomé à l'HEAJ, Bruxelles — Belgique" />
     <!-- Métas Facebook Opengraph -->
-    <meta property="og:title" content="TangO project" />
+    <meta property="og:title" content="Portfolio de Tanguy Hellin" />
     <meta property="og:site_name" content="tanguy-hellin.be">
-    <meta property="og:description" content="description" />
+    <meta property="og:description" content="Portfolio de Tanguy Hellin, Web Designer diplomé à l'HEAJ, Bruxelles — Belgique" />
     <meta property="og:url" content="http://tanguy-hellin.be/" />
-    <meta property="og:image" content="http://tanguy-hellin.be/projets/nomDuProjet/assets/images/logo.jpg" />
+    <meta property="og:image" content="http://tanguy-hellin.be/projets/nomDuProjet/assets/images/menu.jpg" />
     <meta property="og:type" content="website" />
     <!-- Métas Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@tanguy-hellin.be">
     <meta name="twitter:creator" content="@tanguy_hellin">
-    <meta name="twitter:title" content="TangO project">
-    <meta name="twitter:description" content="description">
-    <meta name="twitter:image" content="http://tanguy-hellin.be/projets/nomDuProjet/assets/images/logo.jpg">
+    <meta name="twitter:title" content="Portfolio de Tanguy Hellin">
+    <meta name="twitter:description" content="Portfolio de Tanguy Hellin, Web Designer diplomé à l'HEAJ, Bruxelles — Belgique">
+    <meta name="twitter:image" content="http://tanguy-hellin.be/projets/nomDuProjet/assets/images/menu.jpg">
 	</head>
 	<body>
 		<header class="header">
@@ -54,7 +55,7 @@
                 <div class="author__tasks">
                   <ul class="list list__tasks">
                     <li class="tasks__element">Web Design</li>
-                    <li class="tasks__element">Photography</li>
+                    <li class="tasks__element">Photos</li>
                     <li class="tasks__element">UI/UX Design</li>
                     <li class="tasks__element">Video Edit</li>
                     <li class="tasks__element">Web Design</li>
@@ -65,7 +66,6 @@
                 <ul class="list nav__list">
                   <li class="nav__element"><a class="nav__element--link nav__element--actif" href="index.html">Home</a></li>
                   <li class="nav__element"><a class="nav__element--link" href="works.html">Works</a></li>
-                  <li class="nav__element"><a class="nav__element--link" href="about.html">About</a></li>
                   <li class="nav__element"><a class="nav__element--link" href="contact.html">Contact</a></li>
                 </ul>
               </nav>
@@ -87,26 +87,26 @@
         <div class="cursor cursor--open">Open</div>
         <div class="cursor cursor--email">Email</div>
       </div>
-      <div class="intro"></div>
+      <div class="intro intro--home"></div>
       <section class="section section--intro">
         <div class="container">
-          <h1 class="title title--extralarge">
+          <h2 class="title title--extralarge">
             <span class="hidden">
-              <span>Lorem</span>
+              <span>Port</span>
             </span>
             <span class="hidden">
-              <span>Ipsum</span>
+              <span>Folio</span>
             </span>
             <span class="hidden">
-              <span>Dolor</span>
+              <span>
+                Tanguy
+                <div>Hellin</div>
+              </span>
             </span>
             <span class="hidden">
-              <span>Sit</span>
+              <span>2023</span>
             </span>
-            <span class="hidden">
-              <span>Amet</span>
-            </span>
-          </h1>
+          </h2>
           <a class="anchor" href="#scroll">Scroll</a>
         </div>
       </section>
@@ -119,7 +119,7 @@
                 <div class="card">
                 <div class="card__content drag">
                   <span class="card__type">Portfolio</span>
-                  <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                  <h3 class="title title--small">Alexandre, jeune photographe dans l'événementiel</h3>
                   <span class="card__date">Août 2022</span>
                 </div>
                   <a class="open" href="http://tanguy-hellin.be/projets/alexpicture">
@@ -131,7 +131,7 @@
                 <div class="card">
                   <div class="card__content drag">
                     <span class="card__type">TFE</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                    <h3 class="title title--small">Roover, l'aventure de la mission Mars 2020</h3>
                     <span class="card__date">Juin 2022</span>
                   </div>
                   <a class="open" href="http://tanguy-hellin.be/projets/tfe">
@@ -143,7 +143,7 @@
                 <div class="card">
                   <div class="card__content drag">
                     <span class="card__type">Stage</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                    <h3 class="title title--small">Ligue Nationale de la Sclérose en Plaques</h3>
                     <span class="card__date">Décembre 2021</span>
                   </div>
                   <a class="open" href="https://ms-sep.be">
@@ -155,7 +155,7 @@
                 <div class="card">
                   <div class="card__content drag">
                     <span class="card__type">Dataplay</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                    <h3 class="title title--small">Lenny's Garden, compare ton concombre</h3>
                     <span class="card__date">Mai 2021</span>
                   </div>
                   <a class="open" href="http://lennysgarden.be">
@@ -167,7 +167,7 @@
                 <div class="card">
                   <div class="card__content drag">
                     <span class="card__type">TFA</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                    <h3 class="title title--small">Kocraft, le lieu pour les projets de cosplays</h3>
                     <span class="card__date">Mai 2021</span>
                   </div>
                   <a class="open" href="http://tanguy-hellin.be/projets/tfa">
@@ -178,8 +178,8 @@
               <div class="swiper-slide">
                 <div class="card">
                   <div class="card__content drag">
-                    <span class="card__type">Rethinking UX</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                    <span class="card__type">RUX</span>
+                    <h3 class="title title--small">Rethinking UX, l'analyse du site de l'iMAL</h3>
                     <span class="card__date">Février 2021</span>
                   </div>
                   <a class="open" href="http://tanguy-hellin.be/projets/rethinking-ux">
@@ -191,7 +191,7 @@
                 <div class="card">
                   <div class="card__content drag">
                     <span class="card__type">Iolce</span>
-                    <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+                    <h3 class="title title--small">Iolce, l'analyse de la conférence Data Design Code</h3>
                     <span class="card__date">Décembre 2020</span>
                   </div>
                   <a class="open" href="http://tanguy-hellin.be/projets/iolce">
@@ -203,14 +203,18 @@
           </div>
         </div>
       </section>
-      <section class="section section--brown">
+      <section class="section section--jaune">
         <div class="lines">
           <div class="line line--1"></div>
           <div class="line line--2"></div>
           <div class="line line--3"></div>
         </div>
         <div class="container">
-          <h2 class="title title--large">Test</h2>
+          <h1 class="title title--large">À propos</h1>
+          <p class="bold"><span class="background">Jeune bruxellois de 21 ans, diplomé à la Haute Ecole Albert Jacquard en 2022, je vous accompagne dans la création de design et l'intégration de sites internet afin de rendre le web plus accessible et&nbsp;interactif.</span></p>
+          <div class="parallax parallax--city"></div>
+          <div class="parallax parallax--author"></div>
+          <p><span class="background">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nesciunt quae enim vero dicta? Animi ex ullam facere, sint quod modi, in exercitationem accusantium inventore dolore temporibus officiis nisi sunt?</span></p>
         </div>
       </section>
       <section class="section section--services">
@@ -269,12 +273,11 @@
             <ul class="list footer__nav">
               <li><a href="index.html">Home</a></li>
               <li><a href="works.html">Works</a></li>
-              <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer__top--right">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, recusandae? Eius aliquam vitae asperiores neque repellat sed voluptatibus, autem ullam in, necessitatibus maiores tenetur illum esse id omnis earum impedit?</p>
+            <p>Jeune bruxellois de 21 ans, diplomé à la Haute Ecole Albert Jacquard en 2022, je vous accompagne dans la création de design et l'intégration de sites internet afin de rendre le web plus accessible et&nbsp;interactif.</p>
           </div>
         </div>
         <div class="footer__bottom">
