--- a/workflow/src/works.html
+++ b/workflow/src/works.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>TangO project</title>
+		<title>Works — Tanguy Hellin</title>
     <link rel="stylesheet" href="styles/main.css">
 		<script src="scripts/main.js" defer></script>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logo.svg"/>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Méta Google -->
-    <meta name="title" content="TangO project" />
-    <meta name="description" content="description" />
+    <meta name="title" content="Portfolio de Tanguy Hellin" />
+    <meta name="description" content="Portfolio de Tanguy Hellin, Web Designer diplomé à l'HEAJ, Bruxelles — Belgique" />
     <!-- Métas Facebook Opengraph -->
-    <meta property="og:title" content="TangO project" />
+    <meta property="og:title" content="Portfolio de Tanguy Hellin" />
     <meta property="og:site_name" content="tanguy-hellin.be">
-    <meta property="og:description" content="description" />
+    <meta property="og:description" content="Portfolio de Tanguy Hellin, Web Designer diplomé à l'HEAJ, Bruxelles — Belgique" />
     <meta property="og:url" content="http://tanguy-hellin.be/" />
-    <meta property="og:image" content="http://tanguy-hellin.be/projets/nomDuProjet/assets/images/logo.jpg" />
+    <meta property="og:image" content="http://tanguy-hellin.be/projets/nomDuProjet/assets/images/menu.jpg" />
     <meta property="og:type" content="website" />
     <!-- Métas Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@tanguy-hellin.be">
     <meta name="twitter:creator" content="@tanguy_hellin">
-    <meta name="twitter:title" content="TangO project">
-    <meta name="twitter:description" content="description">
-    <meta name="twitter:image" content="http://tanguy-hellin.be/projets/nomDuProjet/assets/images/logo.jpg">
+    <meta name="twitter:title" content="Portfolio de Tanguy Hellin">
+    <meta name="twitter:description" content="Portfolio de Tanguy Hellin, Web Designer diplomé à l'HEAJ, Bruxelles — Belgique">
+    <meta name="twitter:image" content="http://tanguy-hellin.be/projets/nomDuProjet/assets/images/menu.jpg">
 	</head>
 	<body>
 		<header class="header">
@@ -54,7 +55,7 @@
               <div class="author__tasks">
                 <ul class="list list__tasks">
                   <li class="tasks__element">Web Design</li>
-                  <li class="tasks__element">Photography</li>
+                  <li class="tasks__element">Photos</li>
                   <li class="tasks__element">UI/UX Design</li>
                   <li class="tasks__element">Video Edit</li>
                   <li class="tasks__element">Web Design</li>
@@ -65,7 +66,6 @@
               <ul class="list nav__list">
                 <li class="nav__element"><a class="nav__element--link" href="index.html">Home</a></li>
                 <li class="nav__element"><a class="nav__element--link nav__element--actif" href="works.html">Works</a></li>
-                <li class="nav__element"><a class="nav__element--link" href="about.html">About</a></li>
                 <li class="nav__element"><a class="nav__element--link" href="contact.html">Contact</a></li>
               </ul>
             </nav>
@@ -87,35 +87,35 @@
         <div class="cursor cursor--open">Open</div>
         <div class="cursor cursor--email">Email</div>
       </div>
-      <div class="intro"></div>
-      <section class="section section--intro">
+      <div class="intro intro--works"></div>
+      <!--<section class="section section--intro">
         <div class="container">
-          <h1 class="title title--extralarge">
+          <h2 class="title title--extralarge">
             <span class="hidden">
-              <span>Lorem</span>
+              <span>Port</span>
             </span>
             <span class="hidden">
-              <span>Ipsum</span>
+              <span>Folio</span>
             </span>
             <span class="hidden">
-              <span>Dolor</span>
+              <span>
+                Tanguy
+                <div>Hellin</div>
+              </span>
             </span>
             <span class="hidden">
-              <span>Sit</span>
+              <span>2022</span>
             </span>
-            <span class="hidden">
-              <span>Amet</span>
-            </span>
-          </h1>
+          </h2>
           <a class="anchor" href="#scroll">Scroll</a>
         </div>
-      </section>
+      </section>-->
       <section id="scroll" class="section section--works">
         <div class="container">
           <h2 class="title title--large">Works</h2>
-          <p class="bold">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique rem omnis laboriosam voluptate, alias impedit dolorem sit dolore exercitationem.</p>
+          <p class="bold">Un appreçu de mes différentes réalisations durant mes années d'études et de mes premiers projets clients.</p>
           <div class="works">
-            <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <h3 class="title title--small">Alexandre, jeune photographe dans l'événementiel</h3>
             <a class="open" href="http://tanguy-hellin.be/projets/alexpicture">
               <div class="parallax parallax--works parallax--alex"></div>
             </a>
@@ -125,7 +125,7 @@
             </div>
           </div>
           <div class="works">
-            <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <h3 class="title title--small">Roover, l'aventure de la mission Mars 2020</h3>
             <a class="open" href="http://tanguy-hellin.be/projets/tfe">
               <div class="parallax parallax--works parallax--rover"></div>
             </a>
@@ -135,7 +135,7 @@
             </div>
           </div>
           <div class="works">
-            <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <h3 class="title title--small">Ligue Nationale de la Sclérose en Plaques</h3>
             <a class="open" href="https://ms-sep.be">
               <div class="parallax parallax--works parallax--main"></div>
             </a>
@@ -145,7 +145,7 @@
             </div>
           </div>
           <div class="works">
-            <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <h3 class="title title--small">Lenny's Garden, compare ton concombre</h3>
             <a class="open" href="http://lennysgarden.be">
               <div class="parallax parallax--works parallax--concombre"></div>
             </a>
@@ -155,7 +155,7 @@
             </div>
           </div>
           <div class="works">
-            <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <h3 class="title title--small">Kocraft, le lieu pour les projets de cosplays</h3>
             <a class="open" href="http://tanguy-hellin.be/projets/tfa">
               <div class="parallax parallax--works parallax--cosplay"></div>
             </a>
@@ -165,17 +165,17 @@
             </div>
           </div>
           <div class="works">
-            <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <h3 class="title title--small">Rethinking UX, l'analyse du site de l'iMAL</h3>
             <a class="open" href="http://tanguy-hellin.be/projets/rethinking-ux">
               <div class="parallax parallax--works parallax--imal"></div>
             </a>
             <div class="works__content">
-              <span class="works__type">Rethinking UX</span>
+              <span class="works__type">RUX</span>
               <span class="works__date">Février 2021</span>
             </div>
           </div>
           <div class="works">
-            <h3 class="title title--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h3>
+            <h3 class="title title--small">Iolce, l'analyse de la conférence Data Design Code</h3>
             <a class="open" href="http://tanguy-hellin.be/projets/iolce">
               <div class="parallax parallax--works parallax--shirley"></div>
             </a>
@@ -186,16 +186,6 @@
           </div>
         </div>
       </section>
-      <section class="section section--brown">
-        <div class="lines">
-          <div class="line line--1"></div>
-          <div class="line line--2"></div>
-          <div class="line line--3"></div>
-        </div>
-        <div class="container">
-          <h2 class="title title--large">Test</h2>
-        </div>
-      </section>
       <section class="section section--question">
         <div class="lines">
             <div class="line line--1"></div>
@@ -203,7 +193,7 @@
             <div class="line line--3"></div>
         </div>
         <div class="container">
-            <h2 class="title title--extralarge"><a class="link" href="mailto:hellintanguy@gmail.com"><span class="background">On <span class="eiko">travaille</span> ensemble ?</span></a></h2>
+            <h2 class="title title--question email"><a class="link" href="mailto:hellintanguy@gmail.com"><span class="background">On <span class="eiko">travaille</span> ensemble ?</span></a></h2>
         </div>
     </section>
       <section class="section section--loop">
@@ -254,12 +244,11 @@
             <ul class="list footer__nav">
               <li><a href="index.html">Home</a></li>
               <li><a href="works.html">Works</a></li>
-              <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
           <div class="footer__top--right">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, recusandae? Eius aliquam vitae asperiores neque repellat sed voluptatibus, autem ullam in, necessitatibus maiores tenetur illum esse id omnis earum impedit?</p>
+            <p>Jeune bruxellois de 21 ans, diplomé à la Haute Ecole Albert Jacquard en 2022, je vous accompagne dans la création de design et l'intégration de sites internet afin de rendre le web plus accessible et&nbsp;interactif.</p>
           </div>
         </div>
         <div class="footer__bottom">
